KKC-464 Migrate to Java17