@@ -58,11 +58,6 @@
     		<version>3.0.2</version>
 		</dependency>
 		<dependency>
-    		<groupId>xerces</groupId>
-		    <artifactId>xercesImpl</artifactId>
-    		<version>2.8.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.mango</groupId>
 			<artifactId>aws.secrets.client</artifactId>
 			<version>master-20200226-100233-85319be-14</version>
@@ -81,17 +76,30 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+		<!--
+		<dependency>
+    		<groupId>xerces</groupId>
+		    <artifactId>xercesImpl</artifactId>
+    		<version>2.8.0</version>
+		</dependency> 
+		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito</artifactId>
-			<version>1.7.3</version>
+			<version>1.7.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>1.7.3</version>
+			<version>1.7.4</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
+		-->		
 	</dependencies>
 
 	<build>
@@ -100,8 +108,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>  
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>		
 		 	
@@ -190,6 +198,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<skipTests>${skipUnitTests}</skipTests>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 				</configuration>
 				<dependencies>
 					<dependency>
